// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Empty > should render PRESENTED_IMAGE_COLORED correctly 1`] = `
<DocumentFragment>
  <div
    class="ant-empty"
  >
    <div
      class="ant-empty-image"
    >
      <svg
        fill="none"
        height="100"
        viewBox="0 0 100 100"
        width="100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M95.6251 77.5612L56.7944 93.1631C55.4025 93.7085 53.832 93.7085 52.4401 93.1631L3.68775 73.4891C2.2959 72.9437 2.57807 71.044 3.96052 70.7712L56.2301 52.3574L95.6157 75.6615C96.4526 76.0283 96.4526 77.1098 95.6157 77.4672V77.5612H95.6251Z"
          fill="#132039"
          fill-rule="evenodd"
        />
        <path
          d="M55.034 91.0652C53.6615 91.0652 52.6745 90.6012 51.2054 90.0102L15.9389 75.8226C15.2044 75.5271 14.7898 75.4614 14.4025 74.684C14.0152 73.9066 14.058 73.633 14.058 72.7148V45.4421C14.058 44.5239 14.1105 43.9908 14.5352 43.3242C14.9599 42.6575 15.5247 42.5178 16.4645 42.1506L52.7928 27.9533C53.6419 27.6214 54.0649 27.4799 54.9766 27.4729C55.9065 27.4658 56.3228 27.6214 57.1915 27.9533L94.355 42.1506C95.3163 42.5178 95.9097 42.6369 96.3803 43.2872C96.851 43.9376 96.8167 44.8105 96.8167 45.9123C96.8167 54.3053 96.8171 66.2242 96.8171 71.6733C96.8171 73.4967 96.7382 73.6462 96.268 74.3644C95.7978 75.0826 93.9958 75.7367 93.9958 75.7367L58.7085 90.0102C57.2474 90.6012 56.4064 91.0652 55.034 91.0652Z"
          fill="white"
        />
        <path
          d="M52.7928 27.9533C53.6419 27.6214 54.0649 27.4799 54.9766 27.4729C55.9065 27.4658 56.3228 27.6214 57.1915 27.9533C71.7047 33.4977 79.8417 36.6062 94.355 42.1506C95.3163 42.5178 95.9097 42.6369 96.3803 43.2872C96.851 43.9376 96.8167 44.8105 96.8167 45.9123C96.8167 54.3053 96.8171 66.2241 96.8171 71.6733C96.8171 73.4967 96.7382 73.6462 96.268 74.3644C95.7978 75.0826 93.9958 75.7367 93.9958 75.7367C93.9958 75.7367 70.4415 85.2643 58.7085 90.0102C57.2474 90.6012 56.4064 91.0652 55.034 91.0652C53.6615 91.0652 52.6745 90.6012 51.2054 90.0102M51.2054 90.0102C37.433 84.4696 29.7113 81.3632 15.9389 75.8226M51.2054 90.0102L15.9389 75.8226M58.7085 90.0102L93.9958 75.7367M14.058 72.7148C14.058 73.633 14.0152 73.9066 14.4025 74.684C14.7898 75.4614 15.2044 75.5271 15.9389 75.8226M14.058 72.7148C14.058 62.0642 14.058 56.0927 14.058 45.4421M14.058 72.7148V45.4421M52.7928 27.9533C38.6057 33.4977 30.6516 36.6062 16.4645 42.1506C15.5247 42.5178 14.9599 42.6575 14.5352 43.3242C14.1105 43.9908 14.058 44.5239 14.058 45.4421M52.7928 27.9533L16.4645 42.1506M57.1915 27.9533L94.355 42.1506"
          stroke="#132039"
          stroke-width="0.3"
        />
        <path
          d="M55.4001 58.9026C56.3405 58.9026 58.2587 58.1355 58.2587 58.1355L66.5945 54.8938C66.6562 54.8698 66.7227 54.9153 66.7227 54.9814V60.3477C66.7227 60.4142 66.7899 60.4597 66.8516 60.435L85.4723 52.9867C85.508 52.9725 85.5314 52.9379 85.5314 52.8994V46.9117C85.5314 46.8743 85.5535 46.8406 85.5877 46.8256L95.1965 42.6092C95.2735 42.5754 95.2709 42.4654 95.1924 42.4353L57.0127 27.7849C55.6969 27.28 54.2397 27.2858 52.928 27.8011L15.684 42.4327C15.6055 42.4635 15.6042 42.5742 15.682 42.6069L52.6161 58.1355C52.6161 58.1355 54.4596 58.9026 55.4001 58.9026Z"
          fill="#619EF3"
          stroke="#132039"
          stroke-width="0.3"
        />
        <path
          d="M54.9688 27.4727V58.9774"
          stroke="#132039"
          stroke-width="0.3"
        />
        <path
          d="M68.6071 71.266L68.6377 74.8224C68.6434 75.4828 69.3102 75.9318 69.9242 75.6887L86.3489 69.1865C86.7076 69.0445 86.9432 68.6978 86.9432 68.3121V64.6961C86.9432 64.0312 86.272 63.5762 85.6544 63.8225L69.1992 70.3844C68.8389 70.528 68.6038 70.8782 68.6071 71.266Z"
          fill="#619EF3"
          stroke="#132039"
          stroke-width="0.3"
        />
      </svg>
    </div>
    <div
      class="ant-empty-description"
    >
      <div
        class="ant-empty-description-content"
      >
        No data
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Empty > should render PRESENTED_IMAGE_DATABASE correctly 1`] = `
<DocumentFragment>
  <div
    class="ant-empty"
  >
    <div
      class="ant-empty-image"
    >
      <svg
        fill="none"
        height="100"
        viewBox="0 0 100 100"
        width="100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M92.213 74.77L44.6515 93.8395C42.9734 94.5125 41.0979 94.5125 39.4198 93.8395L8.44198 81.4197C7.16769 80.9082 7.16769 79.1134 8.44198 78.6019L53.9036 60.376C55.5817 59.7029 57.4572 59.7029 59.1353 60.376L92.222 73.6393C92.7335 73.8457 92.7335 74.5636 92.222 74.77H92.213Z"
          fill="#132039"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M43.744 71.054V46.8514C43.744 45.6131 44.4978 44.4913 45.6554 44.0337L66.7888 35.5533C67.758 35.1675 68.8349 35.1675 69.8041 35.5533L90.5965 43.899C91.9605 44.4465 92.8489 45.7656 92.8489 47.2284V70.686C92.8489 72.1488 91.9605 73.4679 90.5965 74.0153L69.6336 82.4238C68.7721 82.7649 67.8208 82.7649 66.9593 82.4238L45.6554 73.8807C44.5067 73.4141 43.744 72.3013 43.744 71.0629V71.054Z"
          fill="#619EF3"
          fill-rule="evenodd"
          stroke="#132039"
          stroke-width="0.3"
        />
        <path
          clip-rule="evenodd"
          d="M68.906 35.7982L90.3267 44.3951C90.6677 44.5298 90.6677 45.0233 90.3267 45.149L69.4445 53.5934C69.0765 53.7369 68.6727 53.7369 68.3048 53.5934L46.3099 45.14C45.9599 45.0143 45.9509 44.5208 46.3009 44.3862L67.7036 35.7982C68.0894 35.6456 68.5291 35.6456 68.915 35.7982H68.906Z"
          fill="#132039"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M71.947 39.5727C71.1662 38.9984 69.8202 38.6215 68.2766 38.6215C66.7331 38.6215 65.396 38.9984 64.6063 39.5727H63.8884V40.7213C63.8884 41.8879 65.8537 42.8302 68.2766 42.8302C70.6996 42.8302 72.6649 41.8879 72.6649 40.7213V39.5727H71.947Z"
          fill="white"
          fill-rule="evenodd"
        />
        <path
          d="M68.2904 41.6789C70.7139 41.6789 72.6786 40.7348 72.6786 39.5701C72.6786 38.4054 70.7139 37.4612 68.2904 37.4612C65.8668 37.4612 63.9022 38.4054 63.9022 39.5701C63.9022 40.7348 65.8668 41.6789 68.2904 41.6789Z"
          fill="white"
        />
        <path
          clip-rule="evenodd"
          d="M72.0311 47.6526C71.2503 47.0783 69.9043 46.7014 68.3608 46.7014C66.8172 46.7014 65.4801 47.0783 64.6904 47.6526H63.9725V48.8012C63.9725 49.9678 65.9378 50.9101 68.3608 50.9101C70.7837 50.9101 72.749 49.9678 72.749 48.8012V47.6526H72.0311Z"
          fill="white"
          fill-rule="evenodd"
        />
        <path
          d="M68.3608 49.7628C70.7843 49.7628 72.749 48.8187 72.749 47.654C72.749 46.4893 70.7843 45.5451 68.3608 45.5451C65.9372 45.5451 63.9725 46.4893 63.9725 47.654C63.9725 48.8187 65.9372 49.7628 68.3608 49.7628Z"
          fill="white"
        />
        <path
          clip-rule="evenodd"
          d="M59.6561 43.592C58.8753 43.0177 57.5293 42.6408 55.9858 42.6408C54.4422 42.6408 53.1051 43.0177 52.3154 43.592H51.5975V44.7407C51.5975 45.9073 53.5628 46.8496 55.9858 46.8496C58.4087 46.8496 60.374 45.9073 60.374 44.7407V43.592H59.6561Z"
          fill="white"
          fill-rule="evenodd"
        />
        <path
          d="M55.9916 45.7023C58.4152 45.7023 60.3798 44.7581 60.3798 43.5934C60.3798 42.4287 58.4152 41.4846 55.9916 41.4846C53.5681 41.4846 51.6034 42.4287 51.6034 43.5934C51.6034 44.7581 53.5681 45.7023 55.9916 45.7023Z"
          fill="white"
        />
        <path
          clip-rule="evenodd"
          d="M84.0173 43.5921C83.2366 43.0178 81.8905 42.6409 80.347 42.6409C78.8035 42.6409 77.4664 43.0178 76.6767 43.5921H75.9588V44.7408C75.9588 45.9074 77.9241 46.8496 80.347 46.8496C82.77 46.8496 84.7352 45.9074 84.7352 44.7408V43.5921H84.0173Z"
          fill="white"
          fill-rule="evenodd"
        />
        <path
          d="M80.3471 45.7023C82.7706 45.7023 84.7353 44.7581 84.7353 43.5934C84.7353 42.4287 82.7706 41.4846 80.3471 41.4846C77.9235 41.4846 75.9589 42.4287 75.9589 43.5934C75.9589 44.7581 77.9235 45.7023 80.3471 45.7023Z"
          fill="white"
        />
        <path
          clip-rule="evenodd"
          d="M44.2654 40.3169V16.8592C44.2654 15.3965 45.1539 14.0773 46.5179 13.5299L66.8078 5.39064C68.0911 4.87015 69.5269 4.87015 70.8191 5.39064L91.109 13.5299C92.4731 14.0773 93.3615 15.3965 93.3615 16.8592V40.3169C93.3615 41.7797 92.4731 43.0988 91.109 43.6462L70.8191 51.7855C69.5359 52.297 68.1 52.297 66.8078 51.7855L46.5179 43.6462C45.1539 43.0988 44.2654 41.7797 44.2654 40.3169Z"
          fill="white"
          fill-rule="evenodd"
          stroke="#132039"
          stroke-width="0.3"
        />
        <path
          clip-rule="evenodd"
          d="M72.4685 9.20736C71.6878 8.63303 70.3417 8.25613 68.7982 8.25613C67.2547 8.25613 65.9176 8.63303 65.1279 9.20736H64.41V10.356C64.41 11.5226 66.3752 12.4649 68.7982 12.4649C71.2211 12.4649 73.1864 11.5226 73.1864 10.356V9.20736H72.4685Z"
          fill="#132039"
          fill-rule="evenodd"
        />
        <path
          d="M68.804 11.3157C71.2275 11.3157 73.1922 10.3716 73.1922 9.20688C73.1922 8.04219 71.2275 7.09802 68.804 7.09802C66.3804 7.09802 64.4158 8.04219 64.4158 9.20688C64.4158 10.3716 66.3804 11.3157 68.804 11.3157Z"
          fill="white"
        />
        <path
          clip-rule="evenodd"
          d="M72.5388 17.2895C71.758 16.7152 70.4119 16.3383 68.8684 16.3383C67.3249 16.3383 65.9878 16.7152 65.1981 17.2895H64.4802V18.4381C64.4802 19.6047 66.4455 20.547 68.8684 20.547C71.2914 20.547 73.2567 19.6047 73.2567 18.4381V17.2895H72.5388Z"
          fill="#132039"
          fill-rule="evenodd"
        />
        <path
          d="M68.8822 19.4016C71.3057 19.4016 73.2704 18.4574 73.2704 17.2927C73.2704 16.128 71.3057 15.1839 68.8822 15.1839C66.4586 15.1839 64.494 16.128 64.494 17.2927C64.494 18.4574 66.4586 19.4016 68.8822 19.4016Z"
          fill="white"
        />
        <path
          clip-rule="evenodd"
          d="M60.1776 13.2327C59.3968 12.6583 58.0507 12.2814 56.5072 12.2814C54.9637 12.2814 53.6266 12.6583 52.8369 13.2327H52.119V14.3813C52.119 15.5479 54.0843 16.4902 56.5072 16.4902C58.9302 16.4902 60.8955 15.5479 60.8955 14.3813V13.2327H60.1776Z"
          fill="#132039"
          fill-rule="evenodd"
        />
        <path
          d="M56.5072 15.3448C58.9308 15.3448 60.8955 14.4007 60.8955 13.236C60.8955 12.0713 58.9308 11.1271 56.5072 11.1271C54.0837 11.1271 52.119 12.0713 52.119 13.236C52.119 14.4007 54.0837 15.3448 56.5072 15.3448Z"
          fill="white"
        />
        <path
          clip-rule="evenodd"
          d="M84.5233 13.2327C83.7425 12.6583 82.3964 12.2814 80.8529 12.2814C79.3094 12.2814 77.9723 12.6583 77.1826 13.2327H76.4647V14.3813C76.4647 15.5479 78.43 16.4902 80.8529 16.4902C83.2759 16.4902 85.2412 15.5479 85.2412 14.3813V13.2327H84.5233Z"
          fill="#132039"
          fill-rule="evenodd"
        />
        <path
          d="M80.8627 15.3448C83.2863 15.3448 85.2509 14.4007 85.2509 13.236C85.2509 12.0713 83.2863 11.1271 80.8627 11.1271C78.4392 11.1271 76.4745 12.0713 76.4745 13.236C76.4745 14.4007 78.4392 15.3448 80.8627 15.3448Z"
          fill="white"
        />
        <path
          clip-rule="evenodd"
          d="M17.6113 81.1136V57.6559C17.6113 56.1932 18.4997 54.874 19.8637 54.3266L40.6561 45.9809C41.6253 45.595 42.7022 45.595 43.6714 45.9809L64.4638 54.3266C65.8278 54.874 66.7163 56.1932 66.7163 57.6559V81.1136C66.7163 82.5763 65.8278 83.8955 64.4638 84.4429L44.1739 92.5822C42.8906 93.0937 41.4548 93.0937 40.1626 92.5822L19.8727 84.4429C18.5087 83.8955 17.6202 82.5763 17.6202 81.1136H17.6113Z"
          fill="#619EF3"
          fill-rule="evenodd"
          stroke="#132039"
          stroke-width="0.3"
        />
        <path
          d="M17.6111 51.6711V27.4686C17.6111 26.2302 18.3649 25.1085 19.5226 24.6508L40.656 16.1705C41.6252 15.7847 42.7021 15.7847 43.6712 16.1705L64.8047 24.6508C65.9533 25.1175 66.7161 26.2302 66.7161 27.4686V51.6711C66.7161 52.9095 65.9623 54.0313 64.8047 54.4889L43.6712 62.9603C42.7021 63.3461 41.6252 63.3461 40.656 62.9603L19.5226 54.4889C18.3739 54.0223 17.6111 52.9095 17.6111 51.6711Z"
          stroke="#132039"
          stroke-dasharray="1.66 1.66"
          stroke-linecap="round"
          stroke-miterlimit="10"
          stroke-width="0.3"
        />
        <path
          d="M20.1833 27.1957L21.1256 27.5815"
          stroke="white"
          stroke-linecap="round"
          stroke-miterlimit="10"
          stroke-width="0.3"
        />
        <path
          d="M22.949 28.3222L40.2686 35.3398C41.489 35.8333 42.862 35.8333 44.0825 35.3308L62.5417 27.721"
          stroke="#132039"
          stroke-dasharray="1.65 1.65"
          stroke-linecap="round"
          stroke-miterlimit="10"
          stroke-width="0.3"
        />
        <path
          d="M63.4548 27.3413L64.3881 26.9554"
          stroke="#132039"
          stroke-linecap="round"
          stroke-miterlimit="10"
          stroke-width="0.3"
        />
        <path
          d="M42.2284 60.9459V59.9318"
          stroke="#132039"
          stroke-linecap="round"
          stroke-miterlimit="10"
          stroke-width="0.3"
        />
        <path
          d="M42.2284 58.0097V39.8107"
          stroke="#132039"
          stroke-dasharray="1.59 1.59"
          stroke-linecap="round"
          stroke-miterlimit="10"
          stroke-width="0.3"
        />
        <path
          d="M42.2284 37.9127V36.8986"
          stroke="#132039"
          stroke-linecap="round"
          stroke-miterlimit="10"
          stroke-width="0.3"
        />
        <path
          d="M17.8342 35.7519C23.9152 35.7519 28.8342 30.8329 28.8342 24.7519C28.8342 18.6709 23.9064 13.7519 17.8342 13.7519C11.7619 13.7519 6.83417 18.6796 6.83417 24.7519C6.83417 30.8242 11.7619 35.7519 17.8342 35.7519Z"
          fill="#132039"
        />
        <path
          d="M21.8938 23.7946H18.785V20.6858C18.785 20.4025 18.5598 20.17 18.2765 20.17H17.3831C17.0998 20.17 16.8674 20.3952 16.8674 20.6858V23.7946H13.7586C13.4753 23.7946 13.2501 24.0198 13.2501 24.3103V25.2037C13.2501 25.487 13.4753 25.7194 13.7586 25.7194H16.8674V28.8283C16.8674 29.1116 17.0926 29.3367 17.3831 29.3367H18.2765C18.5598 29.3367 18.785 29.1116 18.785 28.8283V25.7194H21.8938C22.1771 25.7194 22.4023 25.4942 22.4023 25.2037V24.3103C22.4023 24.027 22.1771 23.7946 21.8938 23.7946Z"
          fill="white"
        />
      </svg>
    </div>
    <div
      class="ant-empty-description"
    >
      <div
        class="ant-empty-description-content"
      >
        No data
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Empty > should render PRESENTED_IMAGE_DEFAULT correctly 1`] = `
<DocumentFragment>
  <div
    class="ant-empty ant-empty-small"
  >
    <div
      class="ant-empty-image"
    >
      <svg
        fill="none"
        height="48"
        viewBox="0 0 48 48"
        width="48"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="white"
          height="26.2146"
          rx="3.62094"
          stroke="currentColor"
          stroke-width="0.3"
          width="30.9708"
          x="8.58383"
          y="2.3999"
        />
        <path
          d="M13.9765 7.61017H34.6419"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="0.3"
        />
        <path
          d="M13.9765 12.9987H27.454"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="0.3"
        />
        <path
          d="M41.6631 45.5996H6.35306C5.05653 45.5996 3.99945 44.4675 3.99945 43.065V21.2908C3.99945 19.8945 5.05069 18.7561 6.35306 18.7561H20.0718C20.866 18.7561 21.6019 19.1838 22.0399 19.9008L23.3131 21.9826C23.7453 22.6933 24.487 23.1273 25.2813 23.1273H41.669C42.9655 23.1273 44.0226 24.2594 44.0226 25.662V43.065C44.0226 44.4612 42.9713 45.5996 41.669 45.5996H41.6631Z"
          fill="white"
          stroke="currentColor"
          stroke-width="0.3"
        />
      </svg>
    </div>
    <div
      class="ant-empty-description"
    >
      <div
        class="ant-empty-description-content"
      >
        No data
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Empty > should render PRESENTED_IMAGE_GUIDE correctly 1`] = `
<DocumentFragment>
  <div
    class="ant-empty"
  >
    <div
      class="ant-empty-image"
    >
      <svg
        fill="none"
        height="160"
        viewBox="0 0 100 100"
        width="160"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          clip-path="url(#clip0_63440_9815)"
        >
          <g
            clip-path="url(#clip1_63440_9815)"
          >
            <path
              d="M9.0791 81.4239L0.608554 65.2676C-0.208581 63.709 0.611056 61.7931 2.30258 61.3077L16.371 57.2709L10.4796 46.0165C9.65251 44.4364 10.5074 42.4974 12.2319 42.0424L79.4037 24.317L98.7206 55.8622C99.2009 56.6464 98.8002 57.6725 97.9155 57.9236L11.4932 82.4606C10.5446 82.73 9.53701 82.2973 9.0791 81.4239Z"
              fill="#132039"
            />
            <path
              d="M98.602 53.9918L96.9053 46.4219C96.7447 45.6899 96.2857 45.0533 95.6526 44.6616L62.5883 23.696C62.2786 23.4996 61.8667 23.6535 61.7719 24.0102L59.425 33.8378C59.3156 34.349 59.4099 34.8776 59.6712 35.3221L63.302 43.4994C63.6525 44.0896 64.3781 44.3408 65.0181 44.0836L66.8437 43.348C67.497 43.0827 68.2382 43.3536 68.5767 43.9657L76.3905 59.5269C77.0106 60.6585 78.3338 61.2138 79.5792 60.8627L97.1339 56.4531C98.1954 56.1526 98.8413 55.0725 98.602 53.9918Z"
              fill="#619EF3"
              stroke="#132039"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="0.3"
            />
            <path
              d="M77.5063 18.6025L63.2499 22.6239C61.9164 23.0034 61.3178 24.5535 62.0465 25.7315L67.1164 36.7821C67.432 37.2916 68.0457 37.5385 68.6261 37.398L70.4352 36.9566C71.0225 36.8155 71.6362 37.0624 71.9525 37.5789L78.8415 50.0064C79.514 51.0986 80.8458 51.5905 82.0662 51.1927L95.1034 47.8269C96.4391 47.3914 96.97 45.7844 96.1607 44.6412L80.5328 19.6735C79.8509 18.7145 78.6433 18.2886 77.5138 18.6088L77.5063 18.6025Z"
              fill="#619EF3"
              stroke="#132039"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="0.3"
            />
            <path
              d="M70.7278 36.9157L69.623 44.3293"
              stroke="#132039"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="0.3"
            />
            <path
              d="M67.9912 37.4982L66.9943 42.1145"
              stroke="#132039"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="0.3"
            />
            <path
              d="M79.9666 51.1061L78.3782 61.0009"
              stroke="#132039"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="0.3"
            />
            <path
              d="M75.2563 23.6878C75.2563 23.6878 75.2489 23.6891 75.2415 23.6904L75.1998 23.7129C74.9838 23.827 74.9158 24.0902 75.0546 24.3171L76.7525 27.0039L76.7964 27.08C76.9955 27.4334 76.9405 27.7705 76.7366 27.8672L71.5005 29.3858L71.8827 27.9633L71.8897 27.9164C71.9247 27.6818 71.7489 27.4614 71.5126 27.3734C71.384 27.3351 71.2632 27.3411 71.1563 27.3827C71.1489 27.384 71.1342 27.3866 71.1268 27.3879C71.0138 27.4382 70.9307 27.5289 70.9059 27.6475L70.2344 30.1108C70.2021 30.2307 70.2229 30.3489 70.2867 30.4519L70.3079 30.4862C70.3791 30.588 70.4846 30.6684 70.6132 30.7068L73.3952 31.5888L73.4521 31.6093C73.5472 31.6306 73.6446 31.6211 73.7232 31.5921C73.738 31.5895 73.7602 31.5856 73.7723 31.5682C73.8853 31.5179 73.9684 31.4272 74.0006 31.3073C74.0651 31.0675 73.8976 30.8076 73.6305 30.7174L72.0343 30.2135L77.2704 28.6949L77.3538 28.6497C78.0288 28.2875 78.1134 27.3817 77.6257 26.5993L75.9278 23.9125L75.8892 23.866C75.742 23.6786 75.4775 23.6032 75.2624 23.6791"
              fill="#132039"
            />
            <path
              d="M38.3741 31.0494C38.5875 29.9646 39.6572 29.2731 40.7248 29.5298L58.8869 33.8015C59.7334 34.0005 60.4271 34.6099 60.7407 35.4194L63.4224 42.3679C63.8353 43.4406 63.2341 44.6354 62.1311 44.9394L44.7586 49.7655C43.5467 50.0998 42.2643 49.534 41.6938 48.4121L37.4742 40.0345C37.0713 39.2398 36.9512 38.33 37.1196 37.4513L38.3672 31.05L38.3741 31.0494Z"
              fill="white"
              stroke="#132039"
              stroke-width="0.3"
            />
            <path
              d="M38.8265 31.5254C38.3138 30.4264 38.9136 29.1341 40.0852 28.8173L52.9568 25.389C54.129 25.0791 55.3587 25.6006 55.9452 26.6654L60.2556 34.4775C60.8508 35.5624 60.299 36.9272 59.1097 37.2804L45.8721 41.2351C44.6216 41.6075 43.2809 41.0119 42.7259 39.8259L38.8259 31.5185L38.8265 31.5254Z"
              fill="white"
              stroke="#132039"
              stroke-width="0.3"
            />
            <path
              d="M44.271 41.2804L42.8798 49.4157"
              stroke="#132039"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="0.3"
            />
            <path
              d="M51.5723 48.0363C51.7857 46.9515 52.8553 46.2601 53.9229 46.5167L72.085 50.7884C72.9316 50.9874 73.6322 51.5963 73.9457 52.4057L76.6275 59.3542C77.0404 60.4269 76.4392 61.6217 75.3362 61.9257L57.9643 66.7587C56.7523 67.093 55.47 66.5272 54.8995 65.4053L50.6799 57.0278C50.2769 56.233 50.1569 55.3233 50.3252 54.4445L51.5729 48.0432L51.5723 48.0363Z"
              fill="white"
              stroke="#132039"
              stroke-width="0.3"
            />
            <path
              d="M52.0232 48.5146C51.5105 47.4156 52.1102 46.1233 53.2824 45.8134L66.154 42.3851C67.3262 42.0752 68.556 42.5967 69.1425 43.6615L73.4529 51.4736C74.048 52.5585 73.4963 53.9233 72.3069 54.2765L59.0694 58.2312C57.8189 58.6036 56.4782 58.008 55.9231 56.822L52.0232 48.5146Z"
              fill="white"
              stroke="#132039"
              stroke-width="0.3"
            />
            <path
              d="M57.5774 58.2594L56.5619 66.7109"
              stroke="#132039"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="0.3"
            />
            <mask
              height="8"
              id="mask0_63440_9815"
              maskUnits="userSpaceOnUse"
              style="mask-type: luminance;"
              width="8"
              x="59"
              y="46"
            >
              <path
                d="M60.189 53.9808L59.0859 47.5586L65.3885 46.6052L66.4852 53.0349L60.189 53.9808Z"
                fill="white"
              />
            </mask>
            <g
              mask="url(#mask0_63440_9815)"
            >
              <mask
                height="8"
                id="mask1_63440_9815"
                maskUnits="userSpaceOnUse"
                style="mask-type: luminance;"
                width="8"
                x="59"
                y="46"
              >
                <path
                  d="M61.0623 53.8506L59.2059 48.2321L64.507 46.7375L66.3709 52.3624L61.0623 53.8506Z"
                  fill="white"
                />
              </mask>
              <g
                mask="url(#mask1_63440_9815)"
              >
                <path
                  d="M63.1926 52.2693C62.9586 52.3033 62.7342 52.2878 62.527 52.2289C62.235 52.1565 61.9762 51.9836 61.7397 51.746C61.5089 51.494 61.3344 51.1675 61.1868 50.7481C61.0537 50.3343 61.0014 49.9694 61.0426 49.6383C61.0844 49.3141 61.2077 49.0456 61.3986 48.834C61.5895 48.6224 61.8405 48.4614 62.1603 48.3712C62.2352 48.3508 62.3038 48.3379 62.3724 48.325C62.6065 48.291 62.8372 48.299 63.0582 48.3567C63.3508 48.436 63.6021 48.6026 63.8392 48.8471C64.07 49.0991 64.2583 49.4244 64.3915 49.8381C64.5252 50.2588 64.5706 50.6243 64.5294 50.9554C64.4807 51.2802 64.3712 51.5475 64.1734 51.7597C63.9894 51.9707 63.7315 52.1323 63.4249 52.2144C63.3431 52.2354 63.2682 52.2558 63.1857 52.2699M62.2581 47.4009C62.1272 47.4191 61.9906 47.4518 61.8615 47.4908C61.3579 47.6317 60.9392 47.8698 60.6126 48.2046C60.2934 48.5457 60.0777 48.9546 59.9797 49.437C59.8888 49.9188 59.9421 50.4578 60.1392 51.0473C60.3363 51.6367 60.6207 52.1071 60.9855 52.4591C61.3642 52.8099 61.7818 53.0458 62.2515 53.1587C62.5931 53.2409 62.9496 53.252 63.3076 53.2003C63.4315 53.1827 63.5612 53.1506 63.6839 53.1192L63.7381 53.1006C64.2343 52.9533 64.6402 52.7302 64.9669 52.3954C65.2936 52.0607 65.5024 51.6524 65.5934 51.1706C65.6838 50.6819 65.6311 50.1497 65.4334 49.5533C65.2363 48.9639 64.9582 48.486 64.5871 48.1415C64.2153 47.7901 63.7977 47.5542 63.3211 47.4419C62.9725 47.3603 62.6161 47.3492 62.2512 47.4015"
                  fill="#132039"
                />
              </g>
            </g>
            <mask
              height="8"
              id="mask2_63440_9815"
              maskUnits="userSpaceOnUse"
              style="mask-type: luminance;"
              width="7"
              x="46"
              y="29"
            >
              <path
                d="M47.8384 36.6961L46.7996 30.6169L51.4991 29.906L52.5378 35.9852L47.8384 36.6961Z"
                fill="white"
              />
            </mask>
            <g
              mask="url(#mask2_63440_9815)"
            >
              <mask
                height="7"
                id="mask3_63440_9815"
                maskUnits="userSpaceOnUse"
                style="mask-type: luminance;"
                width="7"
                x="46"
                y="30"
              >
                <path
                  d="M48.6912 36.5654L46.875 31.0898L50.6525 30.033L52.4618 35.5092L48.6912 36.5654Z"
                  fill="white"
                />
              </mask>
              <g
                mask="url(#mask3_63440_9815)"
              >
                <path
                  d="M50.7396 30.3551C50.6814 30.1791 50.4952 30.0798 50.3166 30.1296L47.2293 30.9908C47.0383 31.0441 46.9306 31.2463 46.993 31.4346L48.5903 36.2499C48.6486 36.4259 48.835 36.525 49.0135 36.475L52.113 35.6068C52.3044 35.5531 52.4118 35.3499 52.3483 35.1615L52.2897 34.9875C52.2307 34.8123 52.0448 34.7141 51.8668 34.764L49.7818 35.3491C49.603 35.3993 49.4163 35.2998 49.3582 35.1233L49.0845 34.2916C49.0228 34.104 49.1297 33.9028 49.3197 33.849L51.1333 33.3355C51.3234 33.2817 51.4304 33.0802 51.3684 32.8925L51.3132 32.7255C51.2548 32.549 51.0679 32.4498 50.8891 32.5003L49.0127 33.0305C48.8332 33.0812 48.6456 32.981 48.588 32.8035L48.3187 31.9729C48.2579 31.7855 48.3651 31.5851 48.5547 31.5316L50.5596 30.966C50.75 30.9123 50.8571 30.7107 50.795 30.5229L50.7396 30.3551Z"
                  fill="#132039"
                />
              </g>
            </g>
            <path
              d="M16.6895 36.9425C16.9028 35.8578 17.9725 35.1663 19.0401 35.423L37.2022 39.6946C38.0487 39.8937 38.7493 40.5025 39.0629 41.312L41.7447 48.2605C42.1576 49.3332 41.5564 50.528 40.4534 50.832L23.0809 55.6581C21.8689 55.9923 20.5866 55.4265 20.0161 54.3046L15.7965 45.9271C15.3935 45.1323 15.2735 44.2226 15.4418 43.3439L16.6895 36.9425Z"
              fill="white"
              stroke="#132039"
              stroke-width="0.3"
            />
            <path
              d="M17.141 37.4277C16.6282 36.3287 17.228 35.0365 18.3996 34.7196L31.2712 31.2914C32.4434 30.9814 33.6732 31.503 34.2596 32.5677L38.57 40.3798C39.1721 41.4642 38.6135 42.8296 37.4241 43.1828L24.1865 47.1374C22.9361 47.5098 21.5954 46.9142 21.0403 45.7283L17.1404 37.4208L17.141 37.4277Z"
              fill="white"
              stroke="#132039"
              stroke-width="0.3"
            />
            <path
              d="M22.4565 46.9914L21.0951 55.4726"
              stroke="#132039"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="0.3"
            />
            <mask
              height="8"
              id="mask4_63440_9815"
              maskUnits="userSpaceOnUse"
              style="mask-type: luminance;"
              width="8"
              x="24"
              y="35"
            >
              <path
                d="M25.5251 42.5254L24.4612 36.3159L30.1793 35.4546L31.2432 41.6641L25.5251 42.5254Z"
                fill="white"
              />
            </mask>
            <g
              mask="url(#mask4_63440_9815)"
            >
              <mask
                height="8"
                id="mask5_63440_9815"
                maskUnits="userSpaceOnUse"
                style="mask-type: luminance;"
                width="8"
                x="24"
                y="35"
              >
                <path
                  d="M26.3787 42.3964L24.5694 36.9202L29.3335 35.5834L31.1422 41.0527L26.3787 42.3964Z"
                  fill="white"
                />
              </mask>
              <g
                mask="url(#mask5_63440_9815)"
              >
                <path
                  d="M29.4374 35.8978C29.3792 35.7218 29.1931 35.6225 29.0145 35.6723L28.6365 35.7777C28.4454 35.831 28.3377 36.0335 28.4003 36.2218L28.9412 37.8477C29.0038 38.0358 28.8965 38.238 28.7057 38.2916L26.6944 38.8567C26.5156 38.907 26.3289 38.8076 26.2707 38.6311L25.7146 36.9437C25.6565 36.7674 25.4699 36.6679 25.2912 36.718L24.9195 36.8221C24.7288 36.8756 24.6213 37.0774 24.6834 37.2654L26.2747 42.0815C26.3329 42.2577 26.5194 42.357 26.698 42.307L27.0697 42.2028C27.2605 42.1494 27.3679 41.9474 27.3057 41.7593L26.7625 40.1194C26.7002 39.9311 26.8079 39.7289 26.999 39.6757L29.0108 39.1157C29.1894 39.066 29.3756 39.1655 29.4337 39.3416L29.9902 41.0302C30.0482 41.2063 30.2345 41.3058 30.4132 41.2559L30.7915 41.1505C30.9824 41.0972 31.0901 40.8952 31.0279 40.707L29.4374 35.8978Z"
                  fill="#132039"
                />
              </g>
            </g>
            <path
              d="M29.9453 54.6222C30.1587 53.5374 31.2284 52.846 32.296 53.1027L50.458 57.3743C51.3046 57.5733 52.0052 58.1822 52.3188 58.9916L55.0005 65.9401C55.4134 67.0129 54.8122 68.2077 53.7092 68.5117L36.3373 73.3447C35.1254 73.6789 33.843 73.1132 33.2725 71.9912L29.0529 63.6137C28.65 62.8189 28.5299 61.9092 28.6983 61.0305L29.9459 54.6291L29.9453 54.6222Z"
              fill="white"
              stroke="#132039"
              stroke-width="0.3"
            />
            <path
              d="M30.3982 55.1064C29.8854 54.0074 30.4852 52.7151 31.6574 52.4052L44.529 48.9769C45.7012 48.667 46.931 49.1885 47.5175 50.2533L51.8279 58.0654C52.4299 59.1497 51.8713 60.5151 50.6819 60.8683L37.4444 64.823C36.1939 65.1954 34.8532 64.5998 34.2981 63.4138L30.3982 55.1064Z"
              fill="white"
              stroke="#132039"
              stroke-width="0.3"
            />
            <path
              d="M35.4817 64.6891L34.4662 73.1406"
              stroke="#132039"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="0.3"
            />
            <path
              d="M8.1758 60.8293C8.38917 59.7445 9.45885 59.053 10.5264 59.3097L28.6885 63.5814C29.5351 63.7804 30.2357 64.3892 30.5493 65.1987L33.231 72.1472C33.6439 73.2199 33.0427 74.4147 31.9397 74.7187L14.5678 79.5517C13.3559 79.886 12.0735 79.3202 11.503 78.1983L7.2834 69.8208C6.88047 69.026 6.76039 68.1163 6.92875 67.2375L8.17639 60.8362L8.1758 60.8293Z"
              fill="white"
              stroke="#132039"
              stroke-width="0.3"
            />
            <path
              d="M8.62865 61.3075C8.11591 60.2085 8.7157 58.9163 9.88789 58.6063L22.7595 55.1781C23.9317 54.8681 25.1615 55.3897 25.7479 56.4544L30.0583 64.2665C30.6604 65.3509 30.1018 66.7163 28.9124 67.0695L15.6748 71.0241C14.4244 71.3966 13.0837 70.8009 12.5286 69.615L8.62865 61.3075Z"
              fill="white"
              stroke="#132039"
              stroke-width="0.3"
            />
            <path
              d="M14.0735 71.0641L13.0579 79.5156"
              stroke="#132039"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="0.3"
            />
            <mask
              height="7"
              id="mask6_63440_9815"
              maskUnits="userSpaceOnUse"
              style="mask-type: luminance;"
              width="6"
              x="38"
              y="53"
            >
              <path
                d="M39.3859 59.7909L38.3414 53.7261L42.8691 53.0439L43.9066 59.1093L39.3859 59.7909Z"
                fill="white"
              />
            </mask>
            <g
              mask="url(#mask6_63440_9815)"
            >
              <mask
                height="7"
                id="mask7_63440_9815"
                maskUnits="userSpaceOnUse"
                style="mask-type: luminance;"
                width="6"
                x="38"
                y="53"
              >
                <path
                  d="M40.2327 59.6633L38.4234 54.1871L42.0165 53.174L43.8327 58.6496L40.2327 59.6633Z"
                  fill="white"
                />
              </mask>
              <g
                mask="url(#mask7_63440_9815)"
              >
                <path
                  d="M39.5764 54.2032C39.5179 54.0264 39.3304 53.9272 39.1514 53.9784L38.7719 54.0867C38.5822 54.1409 38.4757 54.3422 38.5376 54.5295L40.1293 59.347C40.1875 59.5233 40.3743 59.6226 40.5531 59.5723L43.4819 58.7476C43.6731 58.6938 43.7802 58.4908 43.7168 58.3025L43.658 58.1279C43.5989 57.9528 43.4131 57.8546 43.2352 57.9045L41.3265 58.4397C41.1479 58.4899 40.9614 58.3906 40.9031 58.2145L39.5764 54.2032Z"
                  fill="#132039"
                />
              </g>
            </g>
            <mask
              height="8"
              id="mask8_63440_9815"
              maskUnits="userSpaceOnUse"
              style="mask-type: luminance;"
              width="7"
              x="16"
              y="59"
            >
              <path
                d="M17.6333 66.2566L16.5894 60.1988L21.1171 59.5166L22.154 65.575L17.6333 66.2566Z"
                fill="white"
              />
            </mask>
            <g
              mask="url(#mask8_63440_9815)"
            >
              <mask
                height="8"
                id="mask9_63440_9815"
                maskUnits="userSpaceOnUse"
                style="mask-type: luminance;"
                width="7"
                x="16"
                y="59"
              >
                <path
                  d="M18.4782 66.131L16.6689 60.6548L20.2625 59.6486L22.0782 65.1173L18.4782 66.131Z"
                  fill="white"
                />
              </mask>
              <g
                mask="url(#mask9_63440_9815)"
              >
                <path
                  d="M17.8219 60.6737C17.7636 60.4978 17.5775 60.3986 17.399 60.4484L17.0202 60.554C16.8293 60.6073 16.7216 60.8093 16.7838 60.9974L18.3748 65.8127C18.433 65.9891 18.6198 66.0884 18.7986 66.038L21.7267 65.2135C21.9181 65.1596 22.0253 64.9562 21.9614 64.7678L21.9041 64.599C21.845 64.4246 21.6599 64.3267 21.4824 64.3759L19.5713 64.9066C19.3929 64.9561 19.207 64.8569 19.1488 64.6811L17.8219 60.6737Z"
                  fill="#132039"
                />
              </g>
            </g>
          </g>
        </g>
        <defs>
          <clippath
            id="clip0_63440_9815"
          >
            <rect
              fill="white"
              height="100"
              width="100"
            />
          </clippath>
          <clippath
            id="clip1_63440_9815"
          >
            <rect
              fill="white"
              height="72.2222"
              transform="translate(-0.355469 14)"
              width="100"
            />
          </clippath>
        </defs>
      </svg>
    </div>
    <div
      class="ant-empty-description"
    >
      <div
        class="ant-empty-description-content"
      >
        No data
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Empty > should render horizontal layout with guide image 1`] = `
<DocumentFragment>
  <div
    class="ant-empty ant-empty-horizontal"
  >
    <div
      class="ant-empty-image"
    >
      <svg
        fill="none"
        height="160"
        viewBox="0 0 100 100"
        width="160"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          clip-path="url(#clip0_63440_9815)"
        >
          <g
            clip-path="url(#clip1_63440_9815)"
          >
            <path
              d="M9.0791 81.4239L0.608554 65.2676C-0.208581 63.709 0.611056 61.7931 2.30258 61.3077L16.371 57.2709L10.4796 46.0165C9.65251 44.4364 10.5074 42.4974 12.2319 42.0424L79.4037 24.317L98.7206 55.8622C99.2009 56.6464 98.8002 57.6725 97.9155 57.9236L11.4932 82.4606C10.5446 82.73 9.53701 82.2973 9.0791 81.4239Z"
              fill="#132039"
            />
            <path
              d="M98.602 53.9918L96.9053 46.4219C96.7447 45.6899 96.2857 45.0533 95.6526 44.6616L62.5883 23.696C62.2786 23.4996 61.8667 23.6535 61.7719 24.0102L59.425 33.8378C59.3156 34.349 59.4099 34.8776 59.6712 35.3221L63.302 43.4994C63.6525 44.0896 64.3781 44.3408 65.0181 44.0836L66.8437 43.348C67.497 43.0827 68.2382 43.3536 68.5767 43.9657L76.3905 59.5269C77.0106 60.6585 78.3338 61.2138 79.5792 60.8627L97.1339 56.4531C98.1954 56.1526 98.8413 55.0725 98.602 53.9918Z"
              fill="#619EF3"
              stroke="#132039"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="0.3"
            />
            <path
              d="M77.5063 18.6025L63.2499 22.6239C61.9164 23.0034 61.3178 24.5535 62.0465 25.7315L67.1164 36.7821C67.432 37.2916 68.0457 37.5385 68.6261 37.398L70.4352 36.9566C71.0225 36.8155 71.6362 37.0624 71.9525 37.5789L78.8415 50.0064C79.514 51.0986 80.8458 51.5905 82.0662 51.1927L95.1034 47.8269C96.4391 47.3914 96.97 45.7844 96.1607 44.6412L80.5328 19.6735C79.8509 18.7145 78.6433 18.2886 77.5138 18.6088L77.5063 18.6025Z"
              fill="#619EF3"
              stroke="#132039"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="0.3"
            />
            <path
              d="M70.7278 36.9157L69.623 44.3293"
              stroke="#132039"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="0.3"
            />
            <path
              d="M67.9912 37.4982L66.9943 42.1145"
              stroke="#132039"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="0.3"
            />
            <path
              d="M79.9666 51.1061L78.3782 61.0009"
              stroke="#132039"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="0.3"
            />
            <path
              d="M75.2563 23.6878C75.2563 23.6878 75.2489 23.6891 75.2415 23.6904L75.1998 23.7129C74.9838 23.827 74.9158 24.0902 75.0546 24.3171L76.7525 27.0039L76.7964 27.08C76.9955 27.4334 76.9405 27.7705 76.7366 27.8672L71.5005 29.3858L71.8827 27.9633L71.8897 27.9164C71.9247 27.6818 71.7489 27.4614 71.5126 27.3734C71.384 27.3351 71.2632 27.3411 71.1563 27.3827C71.1489 27.384 71.1342 27.3866 71.1268 27.3879C71.0138 27.4382 70.9307 27.5289 70.9059 27.6475L70.2344 30.1108C70.2021 30.2307 70.2229 30.3489 70.2867 30.4519L70.3079 30.4862C70.3791 30.588 70.4846 30.6684 70.6132 30.7068L73.3952 31.5888L73.4521 31.6093C73.5472 31.6306 73.6446 31.6211 73.7232 31.5921C73.738 31.5895 73.7602 31.5856 73.7723 31.5682C73.8853 31.5179 73.9684 31.4272 74.0006 31.3073C74.0651 31.0675 73.8976 30.8076 73.6305 30.7174L72.0343 30.2135L77.2704 28.6949L77.3538 28.6497C78.0288 28.2875 78.1134 27.3817 77.6257 26.5993L75.9278 23.9125L75.8892 23.866C75.742 23.6786 75.4775 23.6032 75.2624 23.6791"
              fill="#132039"
            />
            <path
              d="M38.3741 31.0494C38.5875 29.9646 39.6572 29.2731 40.7248 29.5298L58.8869 33.8015C59.7334 34.0005 60.4271 34.6099 60.7407 35.4194L63.4224 42.3679C63.8353 43.4406 63.2341 44.6354 62.1311 44.9394L44.7586 49.7655C43.5467 50.0998 42.2643 49.534 41.6938 48.4121L37.4742 40.0345C37.0713 39.2398 36.9512 38.33 37.1196 37.4513L38.3672 31.05L38.3741 31.0494Z"
              fill="white"
              stroke="#132039"
              stroke-width="0.3"
            />
            <path
              d="M38.8265 31.5254C38.3138 30.4264 38.9136 29.1341 40.0852 28.8173L52.9568 25.389C54.129 25.0791 55.3587 25.6006 55.9452 26.6654L60.2556 34.4775C60.8508 35.5624 60.299 36.9272 59.1097 37.2804L45.8721 41.2351C44.6216 41.6075 43.2809 41.0119 42.7259 39.8259L38.8259 31.5185L38.8265 31.5254Z"
              fill="white"
              stroke="#132039"
              stroke-width="0.3"
            />
            <path
              d="M44.271 41.2804L42.8798 49.4157"
              stroke="#132039"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="0.3"
            />
            <path
              d="M51.5723 48.0363C51.7857 46.9515 52.8553 46.2601 53.9229 46.5167L72.085 50.7884C72.9316 50.9874 73.6322 51.5963 73.9457 52.4057L76.6275 59.3542C77.0404 60.4269 76.4392 61.6217 75.3362 61.9257L57.9643 66.7587C56.7523 67.093 55.47 66.5272 54.8995 65.4053L50.6799 57.0278C50.2769 56.233 50.1569 55.3233 50.3252 54.4445L51.5729 48.0432L51.5723 48.0363Z"
              fill="white"
              stroke="#132039"
              stroke-width="0.3"
            />
            <path
              d="M52.0232 48.5146C51.5105 47.4156 52.1102 46.1233 53.2824 45.8134L66.154 42.3851C67.3262 42.0752 68.556 42.5967 69.1425 43.6615L73.4529 51.4736C74.048 52.5585 73.4963 53.9233 72.3069 54.2765L59.0694 58.2312C57.8189 58.6036 56.4782 58.008 55.9231 56.822L52.0232 48.5146Z"
              fill="white"
              stroke="#132039"
              stroke-width="0.3"
            />
            <path
              d="M57.5774 58.2594L56.5619 66.7109"
              stroke="#132039"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="0.3"
            />
            <mask
              height="8"
              id="mask0_63440_9815"
              maskUnits="userSpaceOnUse"
              style="mask-type: luminance;"
              width="8"
              x="59"
              y="46"
            >
              <path
                d="M60.189 53.9808L59.0859 47.5586L65.3885 46.6052L66.4852 53.0349L60.189 53.9808Z"
                fill="white"
              />
            </mask>
            <g
              mask="url(#mask0_63440_9815)"
            >
              <mask
                height="8"
                id="mask1_63440_9815"
                maskUnits="userSpaceOnUse"
                style="mask-type: luminance;"
                width="8"
                x="59"
                y="46"
              >
                <path
                  d="M61.0623 53.8506L59.2059 48.2321L64.507 46.7375L66.3709 52.3624L61.0623 53.8506Z"
                  fill="white"
                />
              </mask>
              <g
                mask="url(#mask1_63440_9815)"
              >
                <path
                  d="M63.1926 52.2693C62.9586 52.3033 62.7342 52.2878 62.527 52.2289C62.235 52.1565 61.9762 51.9836 61.7397 51.746C61.5089 51.494 61.3344 51.1675 61.1868 50.7481C61.0537 50.3343 61.0014 49.9694 61.0426 49.6383C61.0844 49.3141 61.2077 49.0456 61.3986 48.834C61.5895 48.6224 61.8405 48.4614 62.1603 48.3712C62.2352 48.3508 62.3038 48.3379 62.3724 48.325C62.6065 48.291 62.8372 48.299 63.0582 48.3567C63.3508 48.436 63.6021 48.6026 63.8392 48.8471C64.07 49.0991 64.2583 49.4244 64.3915 49.8381C64.5252 50.2588 64.5706 50.6243 64.5294 50.9554C64.4807 51.2802 64.3712 51.5475 64.1734 51.7597C63.9894 51.9707 63.7315 52.1323 63.4249 52.2144C63.3431 52.2354 63.2682 52.2558 63.1857 52.2699M62.2581 47.4009C62.1272 47.4191 61.9906 47.4518 61.8615 47.4908C61.3579 47.6317 60.9392 47.8698 60.6126 48.2046C60.2934 48.5457 60.0777 48.9546 59.9797 49.437C59.8888 49.9188 59.9421 50.4578 60.1392 51.0473C60.3363 51.6367 60.6207 52.1071 60.9855 52.4591C61.3642 52.8099 61.7818 53.0458 62.2515 53.1587C62.5931 53.2409 62.9496 53.252 63.3076 53.2003C63.4315 53.1827 63.5612 53.1506 63.6839 53.1192L63.7381 53.1006C64.2343 52.9533 64.6402 52.7302 64.9669 52.3954C65.2936 52.0607 65.5024 51.6524 65.5934 51.1706C65.6838 50.6819 65.6311 50.1497 65.4334 49.5533C65.2363 48.9639 64.9582 48.486 64.5871 48.1415C64.2153 47.7901 63.7977 47.5542 63.3211 47.4419C62.9725 47.3603 62.6161 47.3492 62.2512 47.4015"
                  fill="#132039"
                />
              </g>
            </g>
            <mask
              height="8"
              id="mask2_63440_9815"
              maskUnits="userSpaceOnUse"
              style="mask-type: luminance;"
              width="7"
              x="46"
              y="29"
            >
              <path
                d="M47.8384 36.6961L46.7996 30.6169L51.4991 29.906L52.5378 35.9852L47.8384 36.6961Z"
                fill="white"
              />
            </mask>
            <g
              mask="url(#mask2_63440_9815)"
            >
              <mask
                height="7"
                id="mask3_63440_9815"
                maskUnits="userSpaceOnUse"
                style="mask-type: luminance;"
                width="7"
                x="46"
                y="30"
              >
                <path
                  d="M48.6912 36.5654L46.875 31.0898L50.6525 30.033L52.4618 35.5092L48.6912 36.5654Z"
                  fill="white"
                />
              </mask>
              <g
                mask="url(#mask3_63440_9815)"
              >
                <path
                  d="M50.7396 30.3551C50.6814 30.1791 50.4952 30.0798 50.3166 30.1296L47.2293 30.9908C47.0383 31.0441 46.9306 31.2463 46.993 31.4346L48.5903 36.2499C48.6486 36.4259 48.835 36.525 49.0135 36.475L52.113 35.6068C52.3044 35.5531 52.4118 35.3499 52.3483 35.1615L52.2897 34.9875C52.2307 34.8123 52.0448 34.7141 51.8668 34.764L49.7818 35.3491C49.603 35.3993 49.4163 35.2998 49.3582 35.1233L49.0845 34.2916C49.0228 34.104 49.1297 33.9028 49.3197 33.849L51.1333 33.3355C51.3234 33.2817 51.4304 33.0802 51.3684 32.8925L51.3132 32.7255C51.2548 32.549 51.0679 32.4498 50.8891 32.5003L49.0127 33.0305C48.8332 33.0812 48.6456 32.981 48.588 32.8035L48.3187 31.9729C48.2579 31.7855 48.3651 31.5851 48.5547 31.5316L50.5596 30.966C50.75 30.9123 50.8571 30.7107 50.795 30.5229L50.7396 30.3551Z"
                  fill="#132039"
                />
              </g>
            </g>
            <path
              d="M16.6895 36.9425C16.9028 35.8578 17.9725 35.1663 19.0401 35.423L37.2022 39.6946C38.0487 39.8937 38.7493 40.5025 39.0629 41.312L41.7447 48.2605C42.1576 49.3332 41.5564 50.528 40.4534 50.832L23.0809 55.6581C21.8689 55.9923 20.5866 55.4265 20.0161 54.3046L15.7965 45.9271C15.3935 45.1323 15.2735 44.2226 15.4418 43.3439L16.6895 36.9425Z"
              fill="white"
              stroke="#132039"
              stroke-width="0.3"
            />
            <path
              d="M17.141 37.4277C16.6282 36.3287 17.228 35.0365 18.3996 34.7196L31.2712 31.2914C32.4434 30.9814 33.6732 31.503 34.2596 32.5677L38.57 40.3798C39.1721 41.4642 38.6135 42.8296 37.4241 43.1828L24.1865 47.1374C22.9361 47.5098 21.5954 46.9142 21.0403 45.7283L17.1404 37.4208L17.141 37.4277Z"
              fill="white"
              stroke="#132039"
              stroke-width="0.3"
            />
            <path
              d="M22.4565 46.9914L21.0951 55.4726"
              stroke="#132039"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="0.3"
            />
            <mask
              height="8"
              id="mask4_63440_9815"
              maskUnits="userSpaceOnUse"
              style="mask-type: luminance;"
              width="8"
              x="24"
              y="35"
            >
              <path
                d="M25.5251 42.5254L24.4612 36.3159L30.1793 35.4546L31.2432 41.6641L25.5251 42.5254Z"
                fill="white"
              />
            </mask>
            <g
              mask="url(#mask4_63440_9815)"
            >
              <mask
                height="8"
                id="mask5_63440_9815"
                maskUnits="userSpaceOnUse"
                style="mask-type: luminance;"
                width="8"
                x="24"
                y="35"
              >
                <path
                  d="M26.3787 42.3964L24.5694 36.9202L29.3335 35.5834L31.1422 41.0527L26.3787 42.3964Z"
                  fill="white"
                />
              </mask>
              <g
                mask="url(#mask5_63440_9815)"
              >
                <path
                  d="M29.4374 35.8978C29.3792 35.7218 29.1931 35.6225 29.0145 35.6723L28.6365 35.7777C28.4454 35.831 28.3377 36.0335 28.4003 36.2218L28.9412 37.8477C29.0038 38.0358 28.8965 38.238 28.7057 38.2916L26.6944 38.8567C26.5156 38.907 26.3289 38.8076 26.2707 38.6311L25.7146 36.9437C25.6565 36.7674 25.4699 36.6679 25.2912 36.718L24.9195 36.8221C24.7288 36.8756 24.6213 37.0774 24.6834 37.2654L26.2747 42.0815C26.3329 42.2577 26.5194 42.357 26.698 42.307L27.0697 42.2028C27.2605 42.1494 27.3679 41.9474 27.3057 41.7593L26.7625 40.1194C26.7002 39.9311 26.8079 39.7289 26.999 39.6757L29.0108 39.1157C29.1894 39.066 29.3756 39.1655 29.4337 39.3416L29.9902 41.0302C30.0482 41.2063 30.2345 41.3058 30.4132 41.2559L30.7915 41.1505C30.9824 41.0972 31.0901 40.8952 31.0279 40.707L29.4374 35.8978Z"
                  fill="#132039"
                />
              </g>
            </g>
            <path
              d="M29.9453 54.6222C30.1587 53.5374 31.2284 52.846 32.296 53.1027L50.458 57.3743C51.3046 57.5733 52.0052 58.1822 52.3188 58.9916L55.0005 65.9401C55.4134 67.0129 54.8122 68.2077 53.7092 68.5117L36.3373 73.3447C35.1254 73.6789 33.843 73.1132 33.2725 71.9912L29.0529 63.6137C28.65 62.8189 28.5299 61.9092 28.6983 61.0305L29.9459 54.6291L29.9453 54.6222Z"
              fill="white"
              stroke="#132039"
              stroke-width="0.3"
            />
            <path
              d="M30.3982 55.1064C29.8854 54.0074 30.4852 52.7151 31.6574 52.4052L44.529 48.9769C45.7012 48.667 46.931 49.1885 47.5175 50.2533L51.8279 58.0654C52.4299 59.1497 51.8713 60.5151 50.6819 60.8683L37.4444 64.823C36.1939 65.1954 34.8532 64.5998 34.2981 63.4138L30.3982 55.1064Z"
              fill="white"
              stroke="#132039"
              stroke-width="0.3"
            />
            <path
              d="M35.4817 64.6891L34.4662 73.1406"
              stroke="#132039"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="0.3"
            />
            <path
              d="M8.1758 60.8293C8.38917 59.7445 9.45885 59.053 10.5264 59.3097L28.6885 63.5814C29.5351 63.7804 30.2357 64.3892 30.5493 65.1987L33.231 72.1472C33.6439 73.2199 33.0427 74.4147 31.9397 74.7187L14.5678 79.5517C13.3559 79.886 12.0735 79.3202 11.503 78.1983L7.2834 69.8208C6.88047 69.026 6.76039 68.1163 6.92875 67.2375L8.17639 60.8362L8.1758 60.8293Z"
              fill="white"
              stroke="#132039"
              stroke-width="0.3"
            />
            <path
              d="M8.62865 61.3075C8.11591 60.2085 8.7157 58.9163 9.88789 58.6063L22.7595 55.1781C23.9317 54.8681 25.1615 55.3897 25.7479 56.4544L30.0583 64.2665C30.6604 65.3509 30.1018 66.7163 28.9124 67.0695L15.6748 71.0241C14.4244 71.3966 13.0837 70.8009 12.5286 69.615L8.62865 61.3075Z"
              fill="white"
              stroke="#132039"
              stroke-width="0.3"
            />
            <path
              d="M14.0735 71.0641L13.0579 79.5156"
              stroke="#132039"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="0.3"
            />
            <mask
              height="7"
              id="mask6_63440_9815"
              maskUnits="userSpaceOnUse"
              style="mask-type: luminance;"
              width="6"
              x="38"
              y="53"
            >
              <path
                d="M39.3859 59.7909L38.3414 53.7261L42.8691 53.0439L43.9066 59.1093L39.3859 59.7909Z"
                fill="white"
              />
            </mask>
            <g
              mask="url(#mask6_63440_9815)"
            >
              <mask
                height="7"
                id="mask7_63440_9815"
                maskUnits="userSpaceOnUse"
                style="mask-type: luminance;"
                width="6"
                x="38"
                y="53"
              >
                <path
                  d="M40.2327 59.6633L38.4234 54.1871L42.0165 53.174L43.8327 58.6496L40.2327 59.6633Z"
                  fill="white"
                />
              </mask>
              <g
                mask="url(#mask7_63440_9815)"
              >
                <path
                  d="M39.5764 54.2032C39.5179 54.0264 39.3304 53.9272 39.1514 53.9784L38.7719 54.0867C38.5822 54.1409 38.4757 54.3422 38.5376 54.5295L40.1293 59.347C40.1875 59.5233 40.3743 59.6226 40.5531 59.5723L43.4819 58.7476C43.6731 58.6938 43.7802 58.4908 43.7168 58.3025L43.658 58.1279C43.5989 57.9528 43.4131 57.8546 43.2352 57.9045L41.3265 58.4397C41.1479 58.4899 40.9614 58.3906 40.9031 58.2145L39.5764 54.2032Z"
                  fill="#132039"
                />
              </g>
            </g>
            <mask
              height="8"
              id="mask8_63440_9815"
              maskUnits="userSpaceOnUse"
              style="mask-type: luminance;"
              width="7"
              x="16"
              y="59"
            >
              <path
                d="M17.6333 66.2566L16.5894 60.1988L21.1171 59.5166L22.154 65.575L17.6333 66.2566Z"
                fill="white"
              />
            </mask>
            <g
              mask="url(#mask8_63440_9815)"
            >
              <mask
                height="8"
                id="mask9_63440_9815"
                maskUnits="userSpaceOnUse"
                style="mask-type: luminance;"
                width="7"
                x="16"
                y="59"
              >
                <path
                  d="M18.4782 66.131L16.6689 60.6548L20.2625 59.6486L22.0782 65.1173L18.4782 66.131Z"
                  fill="white"
                />
              </mask>
              <g
                mask="url(#mask9_63440_9815)"
              >
                <path
                  d="M17.8219 60.6737C17.7636 60.4978 17.5775 60.3986 17.399 60.4484L17.0202 60.554C16.8293 60.6073 16.7216 60.8093 16.7838 60.9974L18.3748 65.8127C18.433 65.9891 18.6198 66.0884 18.7986 66.038L21.7267 65.2135C21.9181 65.1596 22.0253 64.9562 21.9614 64.7678L21.9041 64.599C21.845 64.4246 21.6599 64.3267 21.4824 64.3759L19.5713 64.9066C19.3929 64.9561 19.207 64.8569 19.1488 64.6811L17.8219 60.6737Z"
                  fill="#132039"
                />
              </g>
            </g>
          </g>
        </g>
        <defs>
          <clippath
            id="clip0_63440_9815"
          >
            <rect
              fill="white"
              height="100"
              width="100"
            />
          </clippath>
          <clippath
            id="clip1_63440_9815"
          >
            <rect
              fill="white"
              height="72.2222"
              transform="translate(-0.355469 14)"
              width="100"
            />
          </clippath>
        </defs>
      </svg>
    </div>
    <div
      class="ant-empty-description"
    >
      <div
        class="ant-empty-title"
      >
        Welcome
      </div>
      <div
        class="ant-empty-description-content"
      >
        Get started
      </div>
    </div>
  </div>
</DocumentFragment>
`;
